k8s/modele-fraude.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-model-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fraud-ai
  template:
    metadata:
      labels:
        app: fraud-ai
    spec:
      containers:
        - name: ia-container
          image: mossaabbelazri/nids-model:latest # On utilise la même image !
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
