k8s/modele-nlp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nlp-model-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nlp-ai
  template:
    metadata:
      labels:
        app: nlp-ai
    spec:
      containers:
        - name: ia-container
          image: mossaabbelazri/nids-model:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
