k8s/mlflow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
        - name: mlflow
          image: ghcr.io/mlflow/mlflow:v2.14.1
          # Ordre explicite de lancer le serveur sur le port 5000
          command: ["mlflow", "server", "--host", "0.0.0.0", "--port", "5000"]
          ports:
            - containerPort: 5000
          # On redonne des ressources normales puisqu'on a 4 noeuds
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service
  namespace: default
spec:
  selector:
    app: mlflow
  ports:
    - port: 5000
      targetPort: 5000
