k8s/nids-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nids-model-deployment
  namespace: default
  labels:
    app: nids-ai
  annotations:
    vault.hashicorp.com/agent-inject: "true"
    vault.hashicorp.com/role: "nids-role"
    vault.hashicorp.com/agent-inject-secret-credentials: "secret/data/mlflow"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nids-ai
  template:
    metadata:
      labels:
        app: nids-ai
      annotations:
        vault.hashicorp.com/agent-inject: "true"
        vault.hashicorp.com/role: "nids-role"
        vault.hashicorp.com/agent-inject-secret-credentials: "secret/data/mlflow"
    spec:
      containers:
        - name: nids-container
          image: mossaabbelazri/nids-model:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "50m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: nids-model-service
  namespace: default
  annotations:
    cloud.google.com/backend-config: '{"default": "nids-wafs-config"}'
spec:
  type: ClusterIP # ClusterIP pour qu'il reste privé, Istio gérera l'entrée
  selector:
    app: nids-ai
  ports:
    - port: 80
      targetPort: 5000
